老师批改作业

--- a/app/scripts/views/biz/mission/update.html
+++ b/app/scripts/views/biz/mission/update.html
@@ -31,6 +31,8 @@
 
                         <div form-textarea text="任务备注" ng-model="param.remark" placeholder="不超过100个字"></div>
 
+                        <div form-input text="URL" ng-model="param.url" placeholder="URL"></div>
+
                         <div class="form-group">
                             <label class="col-sm-2 control-label">题目&nbsp;&nbsp;</label>
                             <div class="col-sm-8">
