任务制课程加选择题的图片

--- a/app/scripts/views/biz/mission/update.html
+++ b/app/scripts/views/biz/mission/update.html
@@ -39,9 +39,9 @@
                                 <div ng-repeat="item in param.questions"
                                      style="border: 1px #ccc dashed;padding: 25px 0;">
                                     <div form-input text="文字题干" ng-model="item.name" placeholder="不超过25个字"
-                                         required="true" minlength="1" maxlength="25"></div>
+                                         minlength="1" maxlength="25"></div>
 
-                                    <div form-textarea text="任务描述" ng-model="item.explain" required="true"></div>
+                                    <div form-image-single text="题干图片" ng-model="item.image"></div>
 
                                     <div form-table text="选项" ng-model="item.options" max="6"
                                          columns="[{'name': 'ID', 'field': 'id',hide:'true'},
@@ -52,6 +52,9 @@
                                         <a class="btn btn-danger btn-rounded pull-right"
                                            ng-click="param.questions&&param.questions.splice($index,1);">删除题目</a>
                                     </div>
+
+                                    <div form-textarea text="答案解析" ng-model="item.explain"></div>
+
                                 </div>
                                 <div class="col-sm-12" style="margin-top: 15px;">
                                     <a class="btn btn-success btn-rounded"
