--- a/app/scripts/views/biz/act/update.html
+++ b/app/scripts/views/biz/act/update.html
@@ -160,7 +160,7 @@
                         <!--{'name': '库存', 'field': 'option_inventory',required:'true'},-->
                         <!--{'name': '排序', 'field': 'order_by',type:'number',min:'0',required:'true'}]"></div>-->
 
-                        <div form-table text="直接买活动类目" ng-model="param.options" max="1"
+                        <div form-table text="直接买活动类目" ng-model="param.options"
                              ng-show="param.category!=2"
                              columns="[{'name': 'ID', 'field': 'option_id',hide:'true'},
                              {'name': '类目', 'field': 'option_name',required:'true'},
@@ -169,7 +169,7 @@
                              {'name': '库存', 'field': 'option_inventory',required:'true'},
                              {'name': '排序', 'field': 'order_by',type:'number',min:'0',required:'true'}]"></div>
 
-                        <div form-table text="人数团活动类目" ng-model="param.groupbuy_options" max="1"
+                        <div form-table text="人数团活动类目" ng-model="param.groupbuy_options"
                              ng-show="param.category!=3"
                              columns="[{'name': 'ID', 'field': 'option_id',hide:'true'},
                              {'name': '类目', 'field': 'option_name',required:'true'},
@@ -363,7 +363,7 @@
 
                         <div form-image text="礼包图片" ng-model="param.gift_pics" max="1" ng-if="param.gift_buy==1"></div>
 
-                        <div form-table text="礼包类目" ng-model="param.gift_options" max="1" ng-show="param.gift_buy==1"
+                        <div form-table text="礼包类目" ng-model="param.gift_options" ng-show="param.gift_buy==1"
                              columns="[{'name': 'ID', 'field': 'option_id',hide:'true'},
                              {'name': '类目', 'field': 'option_name',required:'true'},
                              {'name': '价格', 'field': 'option_price',type:'number',min:'0',required:'true'},
