--- a/app/scripts/views/biz/act/update.html
+++ b/app/scripts/views/biz/act/update.html
@@ -378,16 +378,16 @@
                              source="[{text:'是',value:1},{text:'否',value:2}]" source-api="" ng-disabled="true"
                              ng-if="param.gift_buy==1"></div>
 
-                        <h4 class="col-sm-offset-2 text-danger">若没有折扣不要设置选择礼包折扣,否则会出现系统问题</h4>
+                        <h4 class="col-sm-offset-2 text-danger">没有折扣请选择礼包折扣为否,防止出现系统问题</h4>
                         <div form-radio text="礼包是否打折" ng-model="param.gift_promotion_type" required="true" default="1"
                              source="[{text:'是',value:'1'},{text:'否',value:'2'}]" ng-if="param.gift_buy==1"></div>
 
-                        <div class="form-group" ng-if="param.gift_buy==1&&param.gift_promotion_type==1">
+                        <div class="form-group" ng-show="param.gift_buy==1&&param.gift_promotion_type==1">
                             <div class="form_element">
                                 <label class="col-sm-2 control-label">设置折扣<span class="form_label_dangus">*</span></label>
                                 <div class="col-sm-2">
                                     <input class="form-control text-right" ng-model="gift_discount"
-                                           ng-blur="reset_gift_discount()" required="true"
+                                           ng-blur="reset_gift_discount()"
                                            placeholder="请填写数字">
                                 </div>
                                 <span class="col-sm-1 control-label" style="text-align: left;">%</span>
