--- a/app/scripts/views/biz/dashboard/groupbuys.html
+++ b/app/scripts/views/biz/dashboard/groupbuys.html
@@ -53,14 +53,14 @@
                             <td class="text-center"><span bo-text="item.pv"></span></td>
                             <td class="text-center"><span bo-text="item.uv"></span></td>
                             <td class="text-center"><span bo-text="item.total"></span></td>
-                            <td class="text-center"><span bo-text="item.rate_total+'%'"></span></td>
+                            <td class="text-center"><span bo-text="item.rate_total"></span></td>
                             <td class="text-center"><span bo-text="item.total_wait"></span></td>
                             <td class="text-center"><span bo-text="item.total_finish"></span></td>
                             <td class="text-center"><span bo-text="item.finish_num"></span></td>
                             <td class="text-center"><span bo-text="item.finish_time"></span></td>
-                            <td class="text-center"><span bo-text="item.rate_finish+'%'"></span></td>
+                            <td class="text-center"><span bo-text="item.rate_finish"></span></td>
                             <td class="text-center"><span bo-text="item.total_fail"></span></td>
-                            <td class="text-center"><span bo-text="item.rate_fail+'%'"></span></td>
+                            <td class="text-center"><span bo-text="item.rate_fail"></span></td>
                         </tr>
                         </tbody>
                     </table>
