--- a/app/scripts/views/biz/dashboard/orders.html
+++ b/app/scripts/views/biz/dashboard/orders.html
@@ -51,7 +51,7 @@
                             <td class="text-center"><span bo-text="item.pv"></span></td>
                             <td class="text-center"><span bo-text="item.uv"></span></td>
                             <td class="text-center"><span bo-text="item.total"></span></td>
-                            <td class="text-center"><span bo-text="item.conversion_rate+'%'"></span></td>
+                            <td class="text-center"><span bo-text="item.conversion_rate"></span></td>
                             <td class="text-center"><span bo-text="item.total_groupbuy"></span></td>
                             <td class="text-center"><span bo-text="item.total_order"></span></td>
                             <td class="text-center"><span bo-text="item.total_gift"></span></td>
