--- a/app/scripts/views/biz/dashboard/shares.html
+++ b/app/scripts/views/biz/dashboard/shares.html
@@ -53,7 +53,7 @@
                             <td class="text-center"><span bo-text="item.share_count"></span></td>
                             <td class="text-center"><span bo-text="item.share_user"></span></td>
                             <td class="text-center"><span bo-text="item.order_count"></span></td>
-                            <td class="text-center"><span bo-text="item.conversion_rate+'%'"></span></td>
+                            <td class="text-center"><span bo-text="item.conversion_rate"></span></td>
                             <td class="text-center"><span bo-text="item.share_rate"></span></td>
                             <td class="text-center"><span bo-text="item.avg_share_uv"></span></td>
                             <td class="text-center"><span bo-text="item.avg_share_order"></span></td>
