课程增加字段

--- a/app/scripts/views/biz/act/update.html
+++ b/app/scripts/views/biz/act/update.html
@@ -91,6 +91,7 @@
 
                         <hr>
 
+                        <div form-input text="课程价值标题" ng-model="param.course_label" placeholder="不填默认是:课程价值"></div>
                         <div form-double-date-time text-start="课程开始时间" text-end="结束时间"
                              ng-model-start="param.course_start_time" ng-model-end="param.course_end_time"></div>
                         <div form-input text="课时" ng-model="param.course_num" type="number" min="0"></div>
