--- a/app/scripts/views/biz/merchant/update.html
+++ b/app/scripts/views/biz/merchant/update.html
@@ -18,6 +18,7 @@
                              required="true"></div>
                         <div form-input text="供应商联系人" ng-model="param.contact_name" placeholder="供应商联系人"
                              required="true"></div>
+                        <div form-input text="供应商utm_source" ng-model="param.utm_source" placeholder="供应商utm_source"></div>
                         <div form-image text="营业执照" ng-model="param.business_license" max="10"></div>
                         <h4>登录账号信息</h4>
                         <div form-input text="登录账号" ng-model="param.account.username" placeholder="登录账号"
